--- a/index.html
+++ b/index.html
@@ -6,8 +6,77 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&family=Poppins:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
+
 </head>
 <body>
+    <nav class="navbar" id="navbar">
+        <header>
+            
+            <h1>CSS Technical Documentation</h1>
+        </header>
+        <li class="nav_link">
+            <a href="#introduction">Introduction</a>
+            <a href="#elements">Elements</a>
+            <a href="#css_and_css3">CSS & CSS3</a>
+            <a href="#conclusion">Conclusion</a>
+            <a id= "referencess" href="#references">References</a>
+        </li>
+    </nav>
+    <main id="main_doc">
+        <div class="main_sec" id="introduction">
+            <header>
+                <h3>Introduction</h3>
+            </header>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos cupiditate, quas corporis ullam eaque quos omnis voluptates minus laborum, quae pariatur, at doloremque adipisci qui. Ipsam corporis porro maxime labore. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio aperiam possimus at quidem inventore, dolorum maiores neque magnam id ratione similique eligendi, iste nisi quaerat sed eius doloremque? Cupiditate, enim? Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae earum repellat quod dolorum voluptatibus explicabo totam repellendus eius consequuntur, delectus maiores iste a aliquid et quidem, dolor mollitia sint magni!</p>
+            <ul>
+                <br><li>&nbsp;Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni dolor facilis dolore doloremque aliquid voluptatum quos totam odio asperiores quae pariatur a id architecto aspernatur ea, placeat, vero velit? Deserunt?Lorem ipsum dolor sit, amet consectetur adipisicing elit. A, ratione voluptatum explicabo facilis numquam error consequatur modi id inventore vel maxime. Eveniet id quae eum veniam eos! Saepe, cum velit.</li>
+                <br><li>&nbsp;Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur maiores sunt voluptates quae rerum, odio deserunt eius tenetur magnam, architecto repudiandae placeat adipisci et pariatur autem vel. Exercitationem, adipisci illo? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem, commodi, omnis odio, rem at voluptates excepturi vitae accusamus officiis explicabo aspernatur odit quos molestiae tempora blanditiis corporis. Ea, nostrum cupiditate! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut soluta minima aspernatur, nisi excepturi quia, voluptates vitae possimus labore nesciunt non adipisci veritatis et ab cupiditate. Id sunt ipsa nulla.</li>
+            </ul>
+        </div>
+        <div class="main_sec" id="elements">
+            <header>
+                <h3>Elements</h3>
+            </header>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim perferendis accusantium dignissimos odit, ut iste incidunt voluptatibus accusamus, quam, illum repellat? Repudiandae nulla iste molestiae. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit tempore obcaecati ex explicabo odio porro. Vel, sunt quasi magnam blanditiis minus sapiente autem natus laborum maxime quaerat voluptatibus, optio doloremque. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam est sunt beatae provident libero, quas dolorum, expedita perspiciatis aliquam pariatur, iure officia? Maxime id a atque consequuntur, corporis repellat aspernatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Non eligendi recusandae dolorum perspiciatis fuga. Tempora, voluptatibus sunt cum deserunt rerum minus ipsum exercitationem est veniam, odio distinctio sint cumque nemo.</p>
+            <ul>
+                <br><li>&nbsp;Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente voluptas amet vero cumque eum! Reprehenderit accusantium dolorem molestias harum officiis, nulla nostrum labore nesciunt atque aliquid aliquam repellat ratione nobis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ea accusamus. Commodi, porro! Voluptatibus eaque placeat repellendus rem vitae! Dolorum fuga doloremque vitae atque repellendus sequi quisquam fugit rem. Reprehenderit! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum consectetur assumenda iusto. Ea, minus voluptate! Praesentium eos nesciunt porro veniam, dignissimos modi quas nisi neque, minus illum numquam delectus fugit.</li>
+                <br><li>&nbsp;Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos asperiores iure pariatur blanditiis laborum adipisci laboriosam consectetur, saepe aut porro dolorem officia tempore, libero corrupti molestias atque perferendis nulla minima? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum, modi laborum nobis ipsa accusamus autem fugit qui in dolorem temporibus itaque dolore voluptates? Aut quidem corrupti expedita magni debitis dicta. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, ad dolorum. Accusamus fugiat reiciendis ipsum porro magnam. Deleniti similique in a natus velit, commodi placeat labore dignissimos officiis esse optio.</li>
+            </ul>
+        </div>
+        <div class="main_sec" id="css_and_css3">
+            <header>
+                <h3>CSS & CSS3</h3>
+            </header>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ullam laborum porro perferendis natus. Accusamus soluta, vero quae suscipit optio voluptatum. Veritatis eligendi dolorum culpa vel ipsum, in sit blanditiis? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem nesciunt adipisci, ipsa provident delectus debitis vel nobis fuga officia dolores, culpa qui aliquid accusamus, nam architecto voluptatum laborum ea. Aliquid. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum cum incidunt eos iusto reiciendis provident iste deserunt ullam quos iure eaque odit, est et. Accusantium a culpa iste porro obcaecati. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure neque, magni cupiditate necessitatibus itaque, aut vitae, dignissimos inventore quia aliquid minima! Quos animi veritatis tempora architecto consequuntur laborum temporibus recusandae? Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint quod placeat in quis alias recusandae. Ipsa excepturi ad sequi eius. Praesentium deleniti maiores veritatis. Blanditiis id ipsam laborum sunt cumque.</p>
+            <ul>
+                <br><li>&nbsp;Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, qui blanditiis numquam doloremque odit maiores ipsa praesentium suscipit dolor delectus consequatur, iste modi magnam officiis corporis? Deleniti sunt unde at! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat harum modi doloremque ea esse. Tempore blanditiis, molestiae cumque ipsam nihil quos necessitatibus a debitis inventore assumenda veniam minus quaerat obcaecati! Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, provident odio ullam laboriosam quasi quas temporibus eius quam aliquam, atque praesentium nesciunt maiores velit dignissimos distinctio sit autem omnis tenetur?</li>
+                <br><li>&nbsp;Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, accusamus itaque, mollitia placeat quaerat, nesciunt deserunt libero dolorum totam eveniet voluptas! Voluptatem pariatur fugit possimus odio in maiores, eum enim? Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae unde architecto expedita pariatur eveniet. Iusto nemo omnis quos expedita unde excepturi eius recusandae possimus corrupti rem? Ratione sequi voluptates iure! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque velit nulla eius, accusamus atque sit illo laboriosam? Temporibus omnis aut vero animi a cumque, sit, dignissimos labore veritatis quam quae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus adipisci possimus, excepturi dignissimos temporibus eaque iure, molestiae facere nihil, accusantium architecto qui aut. Laboriosam eos ipsa earum ex, in amet.</li>
+            </ul>
+        </div>
+        <div class="main_sec" id="conclusion">
+            <header>
+                <h3>Conclusion</h3>
+            </header>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto explicabo nihil dolores quidem ab, ea quam sunt eveniet fuga asperiores doloribus neque quas aspernatur? Amet laudantium illum mollitia earum modi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, tempora impedit maiores facere quibusdam nam cupiditate reprehenderit error, nesciunt dolores optio nostrum accusamus animi, repellat alias delectus cum eum enim? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione exercitationem, maiores repellat necessitatibus culpa sit ullam aut sequi eligendi expedita perspiciatis iure minus atque molestias et nesciunt ad. Neque, maiores. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi dolore ipsum alias? Molestias sunt labore quae similique, nulla excepturi id autem repellendus minus! Nostrum magni, et quod nemo repellat recusanda.</p>
+            <ul>
+                <br><li>&nbsp;Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, vel earum unde quos voluptates accusantium optio perspiciatis explicabo deserunt magnam! Aut nihil veniam voluptatibus cupiditate labore dolor iure aperiam neque. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis facere itaque, expedita aliquid debitis enim accusantium aperiam iure ex, laudantium error quo quis eius? Officiis quisquam obcaecati inventore dicta vero!</li>
+                <br><li>&nbsp;Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis dolorem iure enim excepturi, reiciendis sapiente, cupiditate natus voluptatibus veritatis aliquid non magnam nihil error necessitatibus consectetur. Quasi, asperiores dolor. Eaque! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem fuga, quod aliquid voluptate aut placeat, distinctio nam, quasi soluta doloremque quisquam! Vero, cupiditate! Accusantium delectus dolor possimus animi. Assumenda, laborum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quae illum cumque commodi, voluptatum veritatis necessitatibus corporis quos eum quidem et, itaque sequi excepturi temporibus voluptatem enim dolores culpa neque.</li>
+            </ul>
+        </div>
+        <div class="main_sec" id="references">
+            <header>
+                <h3>References</h3>
+            </header>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia placeat similique labore nihil, dolore veritatis consequuntur autem ipsam recusandae vero eum perspiciatis sint. Beatae nesciunt ducimus quos repudiandae? Nulla, ipsam! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde doloremque sequi, quas earum, ullam sed quaerat error sapiente, velit ratione dolore nesciunt animi officiis illum quia at magnam. Nobis, sed! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti omnis asperiores quidem eaque cumque facilis dolor sint fugiat nobis porro ad expedita earum labore natus, totam corporis hic animi nam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta excepturi quae, placeat molestias mollitia natus repellendus culpa odio provident voluptatibus alias laboriosam. Officia ipsa vel quisquam quis delectus fugit iure?</p>
+            <ul>
+                <br><li>&nbsp;Lorem ipsum dolor sit amet consectetur adipisicing elit. Est saepe minus sint vel harum iure. Dolore nisi quibusdam, accusantium neque veritatis laudantium ipsa deserunt soluta! Repellat dolor quidem iste quasi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat delectus aliquid deserunt nam officiis, eaque vel ad quos autem error inventore mollitia corrupti tempora vero. Minima dicta beatae cumque tempore.</li>
+                <br><li>&nbsp;Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, cumque doloremque. Aut qui optio voluptatibus ut ipsa ea voluptate deleniti! Deserunt officiis alias, ut sed id sapiente et ea dolores! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex vel, vero aspernatur odio, accusamus delectus sunt nulla dolor neque ut ullam. Nemo, velit necessitatibus recusandae alias quam unde dolorum repellendus.</li>
+            </ul>
+        </div>
+    </main>
     
 </body>
 </html>
