--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar" id="navbar">
         <header>
-            
+            <a href =""><img src="/assets/css.png"></a>
             <h1>CSS Technical Documentation</h1>
         </header>
         <li class="nav_link">
