--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </li>
     </nav>
     <main id="main_doc">
-        <div class="main_sec" id="introduction">
+        <section class="main_sec" id="introduction">
             <header>
                 <h3>Introduction</h3>
             </header>
@@ -35,8 +35,8 @@
                 <br><li>&nbsp;Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni dolor facilis dolore doloremque aliquid voluptatum quos totam odio asperiores quae pariatur a id architecto aspernatur ea, placeat, vero velit? Deserunt?Lorem ipsum dolor sit, amet consectetur adipisicing elit. A, ratione voluptatum explicabo facilis numquam error consequatur modi id inventore vel maxime. Eveniet id quae eum veniam eos! Saepe, cum velit.</li>
                 <br><li>&nbsp;Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur maiores sunt voluptates quae rerum, odio deserunt eius tenetur magnam, architecto repudiandae placeat adipisci et pariatur autem vel. Exercitationem, adipisci illo? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem, commodi, omnis odio, rem at voluptates excepturi vitae accusamus officiis explicabo aspernatur odit quos molestiae tempora blanditiis corporis. Ea, nostrum cupiditate! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut soluta minima aspernatur, nisi excepturi quia, voluptates vitae possimus labore nesciunt non adipisci veritatis et ab cupiditate. Id sunt ipsa nulla.</li>
             </ul>
-        </div>
-        <div class="main_sec" id="elements">
+        </section>
+        <section class="main_sec" id="elements">
             <header>
                 <h3>Elements</h3>
             </header>
@@ -45,8 +45,8 @@
                 <br><li>&nbsp;Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente voluptas amet vero cumque eum! Reprehenderit accusantium dolorem molestias harum officiis, nulla nostrum labore nesciunt atque aliquid aliquam repellat ratione nobis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ea accusamus. Commodi, porro! Voluptatibus eaque placeat repellendus rem vitae! Dolorum fuga doloremque vitae atque repellendus sequi quisquam fugit rem. Reprehenderit! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum consectetur assumenda iusto. Ea, minus voluptate! Praesentium eos nesciunt porro veniam, dignissimos modi quas nisi neque, minus illum numquam delectus fugit.</li>
                 <br><li>&nbsp;Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos asperiores iure pariatur blanditiis laborum adipisci laboriosam consectetur, saepe aut porro dolorem officia tempore, libero corrupti molestias atque perferendis nulla minima? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum, modi laborum nobis ipsa accusamus autem fugit qui in dolorem temporibus itaque dolore voluptates? Aut quidem corrupti expedita magni debitis dicta. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, ad dolorum. Accusamus fugiat reiciendis ipsum porro magnam. Deleniti similique in a natus velit, commodi placeat labore dignissimos officiis esse optio.</li>
             </ul>
-        </div>
-        <div class="main_sec" id="css_and_css3">
+        </section>
+        <section class="main_sec" id="css_and_css3">
             <header>
                 <h3>CSS & CSS3</h3>
             </header>
@@ -55,8 +55,8 @@
                 <br><li>&nbsp;Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, qui blanditiis numquam doloremque odit maiores ipsa praesentium suscipit dolor delectus consequatur, iste modi magnam officiis corporis? Deleniti sunt unde at! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat harum modi doloremque ea esse. Tempore blanditiis, molestiae cumque ipsam nihil quos necessitatibus a debitis inventore assumenda veniam minus quaerat obcaecati! Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, provident odio ullam laboriosam quasi quas temporibus eius quam aliquam, atque praesentium nesciunt maiores velit dignissimos distinctio sit autem omnis tenetur?</li>
                 <br><li>&nbsp;Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, accusamus itaque, mollitia placeat quaerat, nesciunt deserunt libero dolorum totam eveniet voluptas! Voluptatem pariatur fugit possimus odio in maiores, eum enim? Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae unde architecto expedita pariatur eveniet. Iusto nemo omnis quos expedita unde excepturi eius recusandae possimus corrupti rem? Ratione sequi voluptates iure! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque velit nulla eius, accusamus atque sit illo laboriosam? Temporibus omnis aut vero animi a cumque, sit, dignissimos labore veritatis quam quae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus adipisci possimus, excepturi dignissimos temporibus eaque iure, molestiae facere nihil, accusantium architecto qui aut. Laboriosam eos ipsa earum ex, in amet.</li>
             </ul>
-        </div>
-        <div class="main_sec" id="conclusion">
+        </section>
+        <section class="main_sec" id="conclusion">
             <header>
                 <h3>Conclusion</h3>
             </header>
@@ -65,8 +65,8 @@
                 <br><li>&nbsp;Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, vel earum unde quos voluptates accusantium optio perspiciatis explicabo deserunt magnam! Aut nihil veniam voluptatibus cupiditate labore dolor iure aperiam neque. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis facere itaque, expedita aliquid debitis enim accusantium aperiam iure ex, laudantium error quo quis eius? Officiis quisquam obcaecati inventore dicta vero!</li>
                 <br><li>&nbsp;Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis dolorem iure enim excepturi, reiciendis sapiente, cupiditate natus voluptatibus veritatis aliquid non magnam nihil error necessitatibus consectetur. Quasi, asperiores dolor. Eaque! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem fuga, quod aliquid voluptate aut placeat, distinctio nam, quasi soluta doloremque quisquam! Vero, cupiditate! Accusantium delectus dolor possimus animi. Assumenda, laborum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quae illum cumque commodi, voluptatum veritatis necessitatibus corporis quos eum quidem et, itaque sequi excepturi temporibus voluptatem enim dolores culpa neque.</li>
             </ul>
-        </div>
-        <div class="main_sec" id="references">
+        </section>
+        <section class="main_sec" id="references">
             <header>
                 <h3>References</h3>
             </header>
@@ -75,7 +75,7 @@
                 <br><li>&nbsp;Lorem ipsum dolor sit amet consectetur adipisicing elit. Est saepe minus sint vel harum iure. Dolore nisi quibusdam, accusantium neque veritatis laudantium ipsa deserunt soluta! Repellat dolor quidem iste quasi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat delectus aliquid deserunt nam officiis, eaque vel ad quos autem error inventore mollitia corrupti tempora vero. Minima dicta beatae cumque tempore.</li>
                 <br><li>&nbsp;Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, cumque doloremque. Aut qui optio voluptatibus ut ipsa ea voluptate deleniti! Deserunt officiis alias, ut sed id sapiente et ea dolores! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex vel, vero aspernatur odio, accusamus delectus sunt nulla dolor neque ut ullam. Nemo, velit necessitatibus recusandae alias quam unde dolorum repellendus.</li>
             </ul>
-        </div>
+        </section>
     </main>
     
 </body>
